--- a/frontpfe/src/app/components/navbar/navbar.component.html
+++ b/frontpfe/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
             class="h-10 w-10 rounded-full animate-fadeIn"
           >
           <span class="text-2xl font-bold text-blue-700 hover:text-blue-600 transition-colors duration-300">
-            Stack Question
+            Exception
           </span>
         </div>
       </div>
