developement de dashboard Admin (user management) Backend + Frontend

--- a/frontpfe/src/app/components/navbar/navbar.component.html
+++ b/frontpfe/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,8 @@
             Exception
           </span>
         </div>
+        <!-- Menu de navigation -->
+        
       </div>
     </div>
   </nav>
