--- a/frontpfe/src/app/components/main-navbar/main-navbar.component.html
+++ b/frontpfe/src/app/components/main-navbar/main-navbar.component.html
@@ -10,14 +10,14 @@
         </div>
   
         <!-- Barre de recherche -->
-        <div class="relative flex items-center">
+        <!-- <div class="relative flex items-center">
           <input
             type="text"
             placeholder="Rechercher..."
             class="search-input border border-gray-300 rounded-md px-4 py-2 w-72 focus:outline-none focus:ring-2 focus:ring-blue-400"
           />
           <button class="search-btn absolute right-3 text-gray-500">🔍</button>
-        </div>
+        </div> -->
   
         <!-- Actions -->
         <div class="flex items-center space-x-4">
