--- a/frontpfe/src/app/components/main-navbar/main-navbar.component.html
+++ b/frontpfe/src/app/components/main-navbar/main-navbar.component.html
@@ -20,10 +20,22 @@
         </div> -->
   
         <!-- Actions -->
-        <div class="flex items-center space-x-4">
-          <a *ngIf="isAdmin" (click)="navigateTo('/admin')" class="btn admin-btn">Accès Admin</a>
-          <button (click)="logout()" class="btn logout" id="logoutBtn">Log Out</button>
-        </div>
+        <!-- Actions -->
+<div class="flex items-center space-x-4">
+  <a *ngIf="isAdmin" (click)="navigateTo('/admin')" class="btn admin-btn">Accès Admin</a>
+
+  <!-- Profile Icon -->
+  <a routerLink="/me" class="relative">
+    <img 
+      src="https://cdn-icons-png.flaticon.com/512/149/149071.png" 
+      alt="Profile"
+      class="h-10 w-10 rounded-full border border-gray-300 hover:ring-2 hover:ring-blue-400 transition duration-200"
+    />
+  </a>
+
+  <button (click)="logout()" class="btn logout" id="logoutBtn">Log Out</button>
+</div>
+
       </div>
     </div>
   </nav>
