--- a/frontpfe/src/app/components/users/users.component.html
+++ b/frontpfe/src/app/components/users/users.component.html
@@ -169,6 +169,12 @@
               </svg>
               <span>Joined {{ user.createdAt | date: 'MMM d, y' }}</span>
             </div>
+            <div class="flex items-start">
+                <svg class="w-4 h-4 mt-0.5 text-gray-400 mr-2 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                </svg>
+                <span>Joined {{ user.departement || 'NaN' }}</span>
+              </div>
           </div>
 
           <!-- Action buttons -->
